fix: fixes dependencies injection, correct test annotation and SQL migration schema